--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="#" target="_blank">Yue Ma</a><sup>1</sup></span>
+                <a href="#" target="_blank">Yue Ma</a><sup>1*</sup></span>
                 <span class="author-block">
-                  <a href="#" target="_blank">Yingqing He</a><sup>2</sup></span>
+                  <a href="#" target="_blank">Yingqing He</a><sup>2*</sup></span>
                   <span class="author-block">
                     <a href="http://vinthony.github.io/" target="_blank">Xiaodong Cun</a><sup>3</sup>
                   </span>
@@ -404,7 +404,7 @@ ability of the pre-trained T2I model. The code and models will be made publicly 
       <div class="column">
         <h2 class="title is-2">Pipeline</h2>
         <div class="content has-text-justified">
-          <img src="static/images/framework.gif" />
+          <img src="static/images/framework.png" />
         </div>
         <!-- <p class="content has-text-justified">
          <b>left, Pipeline</b>: we store all the attention amps in DDIM inversion pipeline.
