--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                       
                        <!-- ArXiv abstract Link -->
                   <span class="link-block">
-                    <a href="https://arxiv.org/abs/XXX" target="_blank"
+                    <a href="https://arxiv.org/abs/2304.01186" target="_blank"
                     class="external-link ">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
