--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ ability of the pre-trained T2I model. The code and models will be made publicly 
             type="video/mp4">
           sorry, your browser does not support HTML5 Videos.
           </video>
-        <p class="text-white"> A <c>astronaut</c> on the <c>beach.</c> </p>
+        <p class="text-white"> A <c>astronaut</c>, <c>brown background.</c> </p>
       </div>
       <div class="marquee-item">
         <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1" class="lozad" autoplay muted loop playsinline height="100%">
