--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
               </div>
               <div class="marquee-item">
                 <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1" autoplay muted loop playsinline height="100%">
-                  <source src="static/videos/HeiTao_A/Jackie_Chan_on_the_beach.mp4"
+                  <source src="static/videos/ChangQuan/cccccIron_man_on_the_forest,_Makoto_Shinkai_style.mp4"
                     type="video/mp4">
                   sorry, your browser does not support HTML5 Videos.
                   </video>
-                <p class="text-white"> <c>James Bond</c> on the <c>beach</c> </p>
+                <p class="text-white"> <c>Iron man</c> on <c>forest</c>, <c>Makoto Shinkai</c> </p>
               </div>
               <div class="marquee-item">
                 <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1" autoplay muted loop playsinline height="100%">
@@ -244,7 +244,7 @@
                     type="video/mp4">
                   sorry, your browser does not support HTML5 Videos.
                   </video>
-                <p class="text-white"><c>Stormtrooper</c> on the <c>sea</c></p>
+                <p class="text-white"><c>Stormtroopers</c> on the <c>sea</c></p>
               </div>
               <div class="marquee-item">
                 <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1" autoplay muted loop playsinline height="100%">
@@ -252,7 +252,7 @@
                     type="video/mp4">
                   sorry, your browser does not support HTML5 Videos.
                   </video>
-                <p class="text-white"><c>Astronaut</c> on the <c>moon</c> </p>
+                <p class="text-white"><c>Astronauts</c> on the <c>moon</c> </p>
               </div>
             </span>
             <span>
