--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@ ability of the pre-trained T2I model. The code and models will be made publicly 
             type="video/mp4">
           sorry, your browser does not support HTML5 Videos.
           </video>
-        <p class="text-white"> A <c>astronaut</c> on the <c>moon</c>. </c> </p>
+        <p class="text-white"> A <c>Stormtrooper</c> on the <c>sea</c>. </c> </p>
       </div>
       <div class="marquee-item">
         <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1" class="lozad" autoplay muted loop playsinline height="100%">
@@ -966,7 +966,12 @@ ability of the pre-trained T2I model. The code and models will be made publicly 
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>XXXXX</code></pre>
+      <pre><code>@article{ma2023follow,
+  title={Follow Your Pose: Pose-Guided Text-to-Video Generation using Pose-Free Videos},
+  author={Ma, Yue and He, Yingqing and Cun, Xiaodong and Wang, Xintao and Shan, Ying and Li, Xiu and Chen, Qifeng},
+  journal={arXiv preprint arXiv:2304.01186},
+  year={2023}
+}</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
