--- a/index.html
+++ b/index.html
@@ -422,6 +422,57 @@ ability of the pre-trained T2I model. The code and models will be made publicly 
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">Video Generation Using Stable Diffusion</h2>
+      <!---######################################-->
+      <div class="marquee-item">
+        <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1" class="lozad" autoplay muted loop playsinline height="100%">
+          <source src="static/videos/new_video/8月16日(4).mp4"
+            type="video/mp4">
+          sorry, your browser does not support HTML5 Videos.
+          </video>
+        <p class="text-white"> <c>Policeman</c> on <c>street</c>, <c>Cartoon Shinkai</c> </p>
+      </div>
+      <div class="marquee-item">
+        <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1" class="lozad" autoplay muted loop playsinline height="100%">
+          <source src="static/videos/new_video/a_Iron_man.mp4"
+            type="video/mp4">
+          sorry, your browser does not support HTML5 Videos.
+          </video>
+        <p class="text-white"> <c>Iron man</c> on <c>beach</c> </p>
+      </div>
+      <div class="marquee-item">
+        <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1" class="lozad" autoplay muted loop playsinline height="100%">
+          <source src="static/videos/new_video/8月16日(13).mp4"
+            type="video/mp4">
+          sorry, your browser does not support HTML5 Videos.
+          </video>
+        <p class="text-white"><c>Iron man</c> on <c>beach</c></p>
+      </div>
+      <!---######################################-->
+      <div class="marquee-item">
+        <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1" class="lozad" autoplay muted loop playsinline height="100%">
+          <source src="static/videos/new_video/a_astron_mountain.mp4"
+            type="video/mp4">
+          sorry, your browser does not support HTML5 Videos.
+          </video>
+        <p class="text-white"> <c>Astronaut</c> on <c>mountain</c> </p>
+      </div>
+      <div class="marquee-item">
+        <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1" class="lozad" autoplay muted loop playsinline height="100%">
+          <source src="static/videos/new_video/a_bing.mp4"
+            type="video/mp4">
+          sorry, your browser does not support HTML5 Videos.
+          </video>
+        <p class="text-white"> <c>stormtrooper</c> in <c>gym</c></p>
+      </div>
+      <div class="marquee-item">
+        <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1" class="lozad" autoplay muted loop playsinline height="100%">
+          <source src="static/videos/new_video/hulk.mp4"
+            type="video/mp4">
+          sorry, your browser does not support HTML5 Videos.
+          </video>
+        <p class="text-white"><c>Hulk</c> on the <c>mountain</c></p>
+      </div>
+      <!---######################################-->
       <div class="marquee-item">
         <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1"  class="lozad" autoplay muted loop playsinline height="100%">
           <source src="static/videos/iKun_kao/a_astronaut_on_the_beach.mp4"
