--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ ability of the pre-trained T2I model. The code and models will be made publicly 
     <div class="container">
       <h2 class="title is-3">Video Generation Using Stable Diffusion</h2>
       <!---######################################-->
-      <div class="marquee-item">
+      <!-- <div class="marquee-item">
         <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1" class="lozad" autoplay muted loop playsinline height="100%">
           <source src="static/videos/new_video/8月16日(4).mp4"
             type="video/mp4">
@@ -446,9 +446,9 @@ ability of the pre-trained T2I model. The code and models will be made publicly 
           sorry, your browser does not support HTML5 Videos.
           </video>
         <p class="text-white"><c>Iron man</c> on <c>beach</c></p>
-      </div>
+      </div>-->
       <!---######################################-->
-      <div class="marquee-item">
+      <!--<div class="marquee-item">
         <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1" class="lozad" autoplay muted loop playsinline height="100%">
           <source src="static/videos/new_video/a_astron_mountain.mp4"
             type="video/mp4">
@@ -471,7 +471,7 @@ ability of the pre-trained T2I model. The code and models will be made publicly 
           sorry, your browser does not support HTML5 Videos.
           </video>
         <p class="text-white"><c>Hulk</c> on the <c>mountain</c></p>
-      </div>
+      </div> -->
       <!---######################################-->
       <div class="marquee-item">
         <video onloadstart="this.playbackRate = 0.75;" poster="" id="video1"  class="lozad" autoplay muted loop playsinline height="100%">
